# serializer version: 1
# name: test_file_returns_global_metadata_1
  '''
  
      ###
      Filename: hello.md
      Commits:
  Another commit for this
  -First commit for this
  '''
# ---
# name: test_file_returns_global_metadata_2
  '''
  
      ###
      Filename: hello.md
      Commits:
  Unrelated commit
  '''
# ---
# name: test_handles_files_that_were_edited_today
  '''
  
      ###
      Filename: hello.md
      Commits:
  Unrelated commit
  '''
# ---
